# flex-ml-python

./: .gitignore  README.md  docker-compose.yml  forecast.ipynb  forecast_optimized.ipynb  forecast_optimized.py  requirements.txt
AutogluonModels/ag-20250915_122457/logs/: predictor_log.txt
AutogluonModels/ag-20250915_123328/logs/: predictor_log.txt
AutogluonModels/ag-20250915_123433/logs/: predictor_log.txt
AutogluonModels/ag-20250915_123521/logs/: predictor_log.txt
AutogluonModels/ag-20250915_123548/logs/: predictor_log.txt
AutogluonModels/ag-20250915_123622/: version.txt
AutogluonModels/ag-20250915_123622/logs/: predictor_log.txt
AutogluonModels/ag-20250915_140446/logs/: predictor_log.txt
AutogluonModels/ag-20250915_140646/logs/: predictor_log.txt
AutogluonModels/ag-20250915_140935/logs/: predictor_log.txt
AutogluonModels/ag-20250915_141004/logs/: predictor_log.txt
api/app/: adapters.py  celery_app.py  db.py  main.py  models.py  routers_datasets.py  routers_llm.py  routers_predict.py  routers_presign.py  routers_tasks.py  s3.py  tasks.py
api/app/llm/: azure_client.py  (+2 more)
flexml/: pyproject.toml
flexml/flexml/: __init__.py  io_df.py  io_s3.py  suggest.py
flexml/flexml/pipelines/: __init__.py  anomaly.py  classification.py  clustering.py  forecasting copy.py  forecasting.py  forecasting_autogluon.py
flexml/flexml/pipelines/documentation/: classification.md  forecasting.md
input/: churn_predict.csv  churn_train.csv  daily_requests_summary-smaller.csv  daily_requests_summary.csv  sample_forecasting.csv  weekly_aggregation.csv
sql/: init.sql
(+8 files in other folders)
