[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flexml"
version = "0.1.0"
description = "Flex ML core library: fast I/O, profiling, pipelines"
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.34",
  "polars>=1.5.0",
  "pyarrow>=16.1.0",
  "duckdb>=1.0.0",
  "pandas>=2.2.2",
  "openpyxl>=3.1.3",
  "scikit-learn>=1.5.1",
  "xgboost>=2.1.1",
  "prophet>=1.1.5",
]